--- a/lab_08/docs/tex/report.tex
+++ b/lab_08/docs/tex/report.tex
@@ -124,12 +124,24 @@
 
 \subsection*{Решение}
 \begin{lstlisting}
+(defun rec-add-to-end (lst elem)
+	(cond 
+		((cdr lst) (rec-add-to-end (cdr lst) elem))
+		((listp elem) (setf (cdr lst) elem))
+		(t (setf (cdr lst) (cons elem Nil))))
+	lst)
+
+(defun add-to-end (lst elem)
+	(if (null lst)
+		(cons elem Nil)
+		(rec-add-to-end lst elem)))
+
 (defun select-between (lst bot top)
 	(reduce
 		#'(lambda (acc el)
 			(if (and (> el bot) (< el top))
-				(append acc (cons el Nil))
-				acc))
+				(add-to-end acc el)
+		acc))
 	lst :initial-value ()))
 \end{lstlisting}
 
@@ -146,8 +158,26 @@
 \subsection*{Постановка задачи}
 \subsection*{Решение}
 \begin{lstlisting}
+(defun rec-minus-n-internal (lst n acc)
+	(if (car lst)
+		(cond ((listp (car lst))
+			(add-to-end acc (rec-minus-n (car lst) n ())))
+		((numberp (car lst))
+			(rec-minus-n (cdr lst) n (add-to-end acc (- (car lst) n))))
+		(t
+			(add-to-end acc (car lst))))
+	acc))
+
+(defun rec-minus-n (lst n)
+	(rec-minus-n-internal lst n ()))
+
 (defun minus-n (lst n)
-	(mapcar #'(lambda (el) (- el n)) lst))
+	(mapcar #'(lambda (el)
+		(cond 
+			((listp el) (minus-n el n))
+			((numberp el) (- el n))
+			(t el)))
+	lst))
 \end{lstlisting}
 
 
@@ -173,12 +203,12 @@
 (defun sum-list (lst)
 	(reduce
 		#'(lambda (acc x)
-			(cond ((listp x) (+ acc (sum-list x)))
-				((numberp x) (+ acc x))
-				(t acc)))
-	(cons 0 lst)) ;; NIL Check)
+		(cond 
+			((listp x) (+ acc (sum-list x)))
+			((numberp x) (+ acc x))
+			(t acc)))
+	lst :initial-value 0))
 \end{lstlisting}
-
 
 
 \section*{Контрольные вопросы}
