--- a/lab_09/docs/tex/report.tex
+++ b/lab_09/docs/tex/report.tex
@@ -105,11 +105,25 @@
 
 \subsection*{Решение}
 \begin{lstlisting}
+(defun rec-add-to-end (lst elem)
+	(cond 
+		((cdr lst)
+			(rec-add-to-end (cdr lst) elem))
+		((listp elem)
+			(setf (cdr lst) elem))
+		(t (setf (cdr lst) (cons elem Nil))))
+	lst)
+
+(defun add-to-end (lst elem)
+	(if (null lst)
+		(cons elem Nil)
+		(rec-add-to-end lst elem)))
+
 (defun select-between (lst)
 	(reduce
 		#'(lambda (acc el)
 			(if (and (> el 1) (< el 10))
-				(append acc (cons el Nil))
+				(add-to-end acc el)
 				acc))
 	lst :initial-value ()))
 \end{lstlisting}
@@ -122,11 +136,10 @@
 \subsection*{Решение}
 \begin{lstlisting}
 (defun cartesian-prod (lst1 lst2)
-	(mapcan
-		#'(lambda (x1)
-			(mapcar
-				#'(lambda (x2) (cons x1 x2))
-			lst2))
+	(mapcan #'(lambda (x1)
+		(mapcar #'(lambda (x2)
+			(cons x1 x2))
+		lst2))
 	lst1))
 \end{lstlisting}
 
@@ -159,19 +172,18 @@
 \subsection*{Постановка задачи}
 \subsection*{Решение}
 \begin{lstlisting}
-(defun sqr (x)
-	(* x x))
+(defun list-squares-internal (lst acc)
+	(if (null lst) acc
+		(cond 
+			((listp (car lst))
+				(add-to-end acc (list-squares-internal (car lst) ())))
+			((numberp (car lst))
+				(list-squares-internal (cdr lst) (add-to-end acc (* (car lst) (car lst)))))
+			(t
+				(list-squares-internal (cdr lst) acc)))))
 
 (defun list-squares (lst)
-	(defun wrapper (lst acc)
-		(if (null lst) acc
-			(cond ((listp (car lst))
-				(append acc
-						(wrapper (cdr lst) (wrapper (car lst) ()))))
-				 ((numberp (car lst))
-						(append acc (wrapper (cdr lst) (cons (sqr (car lst)) Nil))))
-				(t acc))))
-	(wrapper lst ()))
+	(list-squares-internal lst ()))
 \end{lstlisting}
 
 \section*{Контрольные вопросы}
