--- a/lab_10/docs/tex/report.tex
+++ b/lab_10/docs/tex/report.tex
@@ -105,11 +105,12 @@
 
 \subsection*{Решение}
 \begin{lstlisting}
+(defun rec-add-internal (lst)
+	(if (null lst) acc
+		(rec-add-internal (cdr lst) (+ acc (car lst)))))
+
 (defun rec-add (lst)
-	(defun wrapper (lst acc)
-		(if (null lst) acc
-			(wrapper (cdr lst) (+ acc (car lst)))))
-	(wrapper lst 0))
+	(rec-add-internal lst 0))
 \end{lstlisting}
 
 \section*{Задание №2}
@@ -165,13 +166,14 @@
 \clearpage
 \subsection*{Решение}
 \begin{lstlisting}
+(defun rec-last-odd-internal (lst curr)
+	(if (null lst) cur
+		(if (oddp (car lst))
+			(rec-last-odd-internal (cdr lst) (car lst))
+			(rec-last-odd-internal (cdr lst) cur))))
+
 (defun rec-last-odd (lst)
-	(defun wrapper (lst cur)
-		(if (null lst) cur
-			(if (oddp (car lst))
-				(wrapper (cdr lst) (car lst))
-				(wrapper (cdr lst) cur))))
-	(wrapper lst nil))
+	(rec-last-odd-internal lst ()))
 \end{lstlisting}
 
 \section*{Задание №7}
@@ -181,7 +183,7 @@
 \subsection*{Решение}
 \begin{lstlisting}
 (defun cons-square (lst)
-	(and lst (cons ((lambda (x) (* x x)) (car lst))
+	(and lst (cons (* (car lst) (car lst))
 		(cons-square (cdr lst)))))
 \end{lstlisting}
 
@@ -251,15 +253,22 @@
 		(+ acc (cdr (assoc 'Salary x))))
 	lst :initial-value 0))
 
-(defun change-salaries (lst changep salary-func)
-	(defun wrapper (salary-func x)
-		(setf (cdr (assoc 'Salary x)) (funcall salary-func (cdr (assoc 'salary x)))))
+(defun get-value (table key)
+	(cdr (assoc key table)))
 
+(defun change-salaries-internal (salary-func curr)
+	(list
+		(cons 'FIO (get-value curr 'FIO))
+		(cons 'Salary (funcall salary-func (get-value curr 'Salary)))
+		(cons 'Age (get-value curr 'Age))
+		(cons 'Category (get-value curr 'Category))))
+
+(defun change-salaries (lst changep salary-func)
 	(mapcar #'(lambda (x)
 		(if (funcall changep x)
-			(wrapper salary-func x)
-			(cdr (assoc 'Salary x))))
-		lst))
+		(change-salaries-internal salary-func x)
+		x))
+	lst))
 
 (change-salaries people
 				 #'(lambda (x) (< (cdr (assoc 'Age x)) 30)) ;; predicate
