--- a/lab_16-17/docs/tex/report.tex
+++ b/lab_16-17/docs/tex/report.tex
@@ -127,7 +127,7 @@
 Так как резольвента хранится в виде стека, то состояние резольвенты требуется отображать в столбик: вершина – сверху! Новый шаг надо начинать с нового состояния резольвенты!
 
 \subsection*{Решение}
-\begin{lstlisting}
+\begin{lstlisting}[language=prolog]
 domains
 	sex = symbol
 	name = string
@@ -181,9 +181,8 @@ goal
 
 Требуется ответить на вопрос: <<За счет чего может быть достигнута эффективность работы системы?>>
 
-
 \subsection*{Решение}
-\begin{lstlisting}
+\begin{lstlisting}[language=prolog]
 domains
 	num = integer
 
